# NexaRAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agent/: dependencies.py  graph.py  intent.py  router.py  runtime.py  schemas.py  tools.py  verifier.py  vision.py
api/: chat.py  context.py  knowledge.py  memory.py
config/: settings.py
core/: chat_service.py  conversation_registry.py  conversation_repository.py  conversation_state.py  knowledge_service.py  recorder.py  runtime_context.py  session_service.py  session_store.py
docs/: Codex自动测试记录1.md  Codex自动测试记录2.md  message-flow.md  手工测试.md  自动测试.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
memory/: conversation.py  daily_memory.py  long_term.py  memory_compactor.py  memory_context.py  memory_policy.py  memory_service.py  session_log.py  stable_memory.py
rag/: __init__.py  bm25.py  chunker.py  document_store.py  embedding.py  evaluation_chain.py  hybrid_retriever.py  index_writer.py  ingestion.py  ingestion_chain.py  knowledge_base.py  reranker.py  retrieval_chain.py  retriever.py  vector.py
scripts/: import_knowledge.py
tests/: conftest.py  test_agent_dependencies.py  test_agent_graph.py  test_agent_group_nodes.py  test_agent_node_runners.py  test_agent_nodes.py  test_answer_verifier.py  test_api.py  test_chat_api_service.py  test_chat_service_agent_group.py  test_config.py  test_context_api.py  test_conversation_registry.py  test_frontend_knowledge_page.py  test_import_knowledge_script.py  test_intent.py  test_knowledge_api.py  test_memory.py  (+12 more)
(+44 files in other folders)
