[project]
name = "nexarag"
version = "2.0.0"
description = "NexaRAG 3C数码智能客服系统 - 混合检索+意图路由+答案验证+长期记忆+评测框架"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.46.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "dashscope>=1.25.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "pydantic>=2.12.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
